--- a/app/src/main/res/menu/pos_menu.xml
+++ b/app/src/main/res/menu/pos_menu.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/action_held_orders"
+        android:title="Held Orders"
+        android:icon="@drawable/ic_held_orders"
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_theme"
+        android:title="Toggle Theme"
+        android:icon="@drawable/ic_brightness_auto"
+        app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_staff"
         android:title="Staff Management" />
