--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#1A237E</color>
-    <color name="colorPrimaryDark">#000051</color>
-    <color name="colorAccent">#FFAB00</color>
+    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorAccent">#03DAC5</color>
+    <color name="colorSurface">#F5F5F5</color>
     <color name="white">#FFFFFFFF</color>
     <color name="black">#FF000000</color>
-    <color name="red">#D32F2F</color>
-    <color name="green">#388E3C</color>
-    <color name="window_background">#FFFFFF</color>
-    <color name="text_primary">#000000</color>
-    <color name="text_secondary">#8A000000</color>
+    <color name="red">#B00020</color>
+    <color name="green">#00C853</color>
+    <color name="amber">#FFAB00</color>
+    <color name="window_background">#FAFAFA</color>
+    <color name="text_primary">#212121</color>
+    <color name="text_secondary">#757575</color>
+    <color name="card_bg">#FFFFFF</color>
 </resources>
